# serializer version: 1
# name: test_generate_content_service_with_image
  list([
    tuple(
      '',
      tuple(
      ),
      dict({
        'contents': list([
          'Describe this image from my doorbell camera',
          b'some file',
          b'some file',
        ]),
        'model': 'models/gemini-2.0-flash',
      }),
    ),
  ])
# ---
# name: test_generate_content_service_without_images
  list([
    tuple(
      '',
      tuple(
      ),
      dict({
        'contents': list([
          'Write an opening speech for a Home Assistant release party',
        ]),
        'model': 'models/gemini-2.0-flash',
      }),
    ),
  ])
# ---
# name: test_load_entry_with_unloaded_entries
  list([
    tuple(
      '',
      tuple(
      ),
      dict({
        'contents': list([
          'Write an opening speech for a Home Assistant release party',
        ]),
        'model': 'models/gemini-2.0-flash',
      }),
    ),
  ])
# ---
